--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h3>Email</h3>
-                            <p>info@eyeonproperty.com</p>
-                            <p>design@eyeonproperty.com</p>
+                            <p>info@eyeonproperty.co.ke</p>
+                            <p>info@eyeonproperty.co.ke</p>
                         </div>
                     </div>
                     <div class="contact-item">
