--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Building Dreams, Designing Spaces</h1>
-            <p>Real Estate • Interior Design • Consultancy</p>
+            <h1>Building Dreams, <span>Designing Spaces</span></h1>
+            <p>Real Estate • <span>Interior Design</span>• Consultancy</p>
             <div class="hero-buttons">
                 <a href="#property" class="btn btn-primary">Explore Property</a>
                 <a href="#design" class="btn btn-secondary">Explore Design</a>
@@ -73,13 +73,13 @@
                         <img src="./uploads/residential aparts.jpg" alt="Apartment Building">
                     </div>
                     <div class="gallery-item">
-                        <img src="./uploads/interlocking banner.jpeg" alt="Modern House">
+                        <img src="./uploads/white brick.webp" alt="Modern House">
                     </div>
                     <div class="gallery-item">
                         <img src="./uploads/bungalow design.jpg" alt="House Interior">
                     </div>
                     <div class="gallery-item">
-                        <img src="./uploads/property 1 duplex.jpg" alt="Luxury Home">
+                        <img src="./uploads/bungalow 1.jpg" alt="Luxury Home">
                     </div>
                 </div>
             </div>
@@ -476,7 +476,7 @@
     <!-- Contact Section -->
     <section id="contact" class="contact section">
         <div class="container">
-            <div class="section-title">
+            <div class="section-title" id="contacts">
                 <h2>Contact Us</h2>
                 <p>Get in touch with us to discuss your property or design needs</p>
             </div>
