--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </section>
 
-    <!-- Property Section -->
+     <!-- Property Section -->
     <section id="property" class="property section">
         <div class="container">
             <div class="section-title">
@@ -64,24 +64,33 @@
                         <li><i class="fas fa-hard-hat"></i> Quality Construction</li>
                         <li><i class="fas fa-key"></i> Gateway to Better Living</li>
                     </ul>
-                    <div class="consultancy-box">
+                    <!-- <div class="consultancy-box">
                         <h3>Expert guidance to make the right real estate investment.</h3>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="property-gallery">
                     <div class="gallery-item">
-                        <img src="./uploads/prpty 1.jpg" alt="flatroof" >
+                        <img src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?ixlib=rb-4.0.3&auto=format&fit=crop&w=870&q=80" alt="Apartment Building">
                     </div>
                     <div class="gallery-item">
-                        <img src="./uploads/prpty 2.jpg" alt="Modern House">
+                        <img src="https://images.unsplash.com/photo-1574362848149-11496d93a7c7?ixlib=rb-4.0.3&auto=format&fit=crop&w=784&q=80" alt="Modern House">
                     </div>
                     <div class="gallery-item">
-                        <img src="./uploads/bungalow design.jpg" alt="House Interior">
+                        <img src="https://images.unsplash.com/photo-1582407947304-fd86f028f716?ixlib=rb-4.0.3&auto=format&fit=crop&w=892&q=80" alt="House Interior">
                     </div>
                     <div class="gallery-item">
-                        <img src="./uploads/bungalow 1.jpg" alt="Luxury Home">
+                        <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?ixlib=rb-4.0.3&auto=format&fit=crop&w=871&q=80" alt="Luxury Home">
                     </div>
                 </div>
+            </div>
+            
+            <!-- Facebook Connect Section -->
+            <div class="facebook-connect">
+                <h3>Follow Our Property Developments</h3>
+                <p>Stay updated on our latest property listings, construction progress, and real estate investment opportunities on our Facebook page.</p>
+                <a href="https://www.facebook.com/profile.php?id=61572318762259" target="_blank" class="facebook-btn">
+                    <i class="fab fa-facebook-f"></i> Follow us on Facebook
+                </a>
             </div>
         </div>
     </section>
@@ -96,7 +105,6 @@
             </div>
         </div>
     </section>
-
     <!-- Design Section -->
     <section id="design" class="design section">
         <div class="container">
@@ -107,16 +115,16 @@
             <div class="design-content">
                 <div class="design-gallery">
                     <div class="gallery-item">
-                        <img src="./uploads/int 1.jpg" alt="Modern Interior">
+                        <img src="https://images.unsplash.com/photo-1540518614846-7eded433c457?ixlib=rb-4.0.3&auto=format&fit=crop&w=859&q=80" alt="Modern Interior">
                     </div>
                     <div class="gallery-item">
-                        <img src="./uploads/int 2.jpg" alt="Living Room">
+                        <img src="https://images.unsplash.com/photo-1493663284031-b7e3aaa4c4b1?ixlib=rb-4.0.3&auto=format&fit=crop&w=870&q=80" alt="Living Room">
                     </div>
                     <div class="gallery-item">
-                        <img src="./uploads/int 3.jpg" alt="Bedroom Design">
+                        <img src="https://images.unsplash.com/photo-1513694203232-719a280e022f?ixlib=rb-4.0.3&auto=format&fit=crop&w=869&q=80" alt="Bedroom Design">
                     </div>
                     <div class="gallery-item">
-                        <img src="./uploads/int 4.jpg" alt="Kitchen Design">
+                        <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&auto=format&fit=crop&w=774&q=80" alt="Kitchen Design">
                     </div>
                 </div>
                 <div class="design-info">
@@ -129,6 +137,15 @@
                         <li><i class="fas fa-ruler-combined"></i> Custom Furniture Design</li>
                     </ul>
                 </div>
+            </div>
+            
+            <!-- Facebook Connect Section -->
+            <div class="facebook-connect">
+                <h3>Follow Our Design Journey</h3>
+                <p>Get daily inspiration, behind-the-scenes looks at our projects, and exclusive design tips on our Facebook page.</p>
+                <a href="https://www.facebook.com/eyeondesignke" target="_blank" class="facebook-btn">
+                    <i class="fab fa-facebook-f"></i> Follow us on Facebook
+                </a>
             </div>
         </div>
     </section>
@@ -510,7 +527,7 @@
                         <div>
                             <h3>Follow Us</h3>
                             <div class="social-links">
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://www.facebook.com/ruth.riungu" target="_blank"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#"><i class="fab fa-instagram"></i></a>
                                 <a href="#"><i class="fab fa-twitter"></i></a>
                                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
