--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
                 </div>
                 <div class="property-gallery">
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?ixlib=rb-4.0.3&auto=format&fit=crop&w=870&q=80" alt="Apartment Building">
+                        <img src="./uploads/prpty 2.jpg" alt="flatroof masionette">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1574362848149-11496d93a7c7?ixlib=rb-4.0.3&auto=format&fit=crop&w=784&q=80" alt="Modern House">
+                        <img src="./uploads/bungalow 1.jpg" alt="Bungalow 1">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1582407947304-fd86f028f716?ixlib=rb-4.0.3&auto=format&fit=crop&w=892&q=80" alt="House Interior">
+                        <img src="./uploads/bungalow design.jpg" alt="Bungalow Design">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?ixlib=rb-4.0.3&auto=format&fit=crop&w=871&q=80" alt="Luxury Home">
+                        <img src="./uploads/prpty 1.jpg" alt="Luxury Home">
                     </div>
                 </div>
             </div>
@@ -115,16 +115,16 @@
             <div class="design-content">
                 <div class="design-gallery">
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1540518614846-7eded433c457?ixlib=rb-4.0.3&auto=format&fit=crop&w=859&q=80" alt="Modern Interior">
+                        <img src="./uploads/int 1.jpg" alt="Modern Interior">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1493663284031-b7e3aaa4c4b1?ixlib=rb-4.0.3&auto=format&fit=crop&w=870&q=80" alt="Living Room">
+                        <img src="./uploads/int 2.jpg" alt="Living Room">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1513694203232-719a280e022f?ixlib=rb-4.0.3&auto=format&fit=crop&w=869&q=80" alt="Bedroom Design">
+                        <img src="./uploads/int 3.jpg" alt="Bedroom Design">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&auto=format&fit=crop&w=774&q=80" alt="Kitchen Design">
+                        <img src="./uploads/int 4.jpg" alt="Kitchen Design">
                     </div>
                 </div>
                 <div class="design-info">
