--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="message">Your Message</label>
-                                <textarea id="message" placeholder="How can we help you?" required></textarea>
+                                <textarea id="message" placeholder="How can we help you? Include phone number as well." required></textarea>
                             </div>
                             <button type="submit" class="submit-btn">Send Message</button>
                         </form>
