--- a/index.html
+++ b/index.html
@@ -281,12 +281,12 @@
         
         <!-- Reel 3 -->
         <div class="reel-item">
-            <iframe 
-                src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Freel%2F1417401506133323%2F&show_text=false&width=267&t=0"
+                <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Freel%2F3794373140784401%2F&show_text=false&width=267&t=0"
                 class="reel-embed"
                 allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" 
                 allowFullScreen>
             </iframe>
+ 
         </div>
         
         <!-- Reel 4 -->
