--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <div class="stat-icon">
                     <i class="fas fa-calendar-alt"></i>
                 </div>
-                <div class="stat-number" data-target="+5">+5</div>
+                <div class="stat-number" data-target="10">10</div>
                 <div class="stat-divider"></div>
                 <div class="stat-label">Years of Experience</div>
             </div>
