--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                         <div>
                             <h3>Email</h3>
                             <p>info@eyeonproperty.co.ke</p>
-                            <p>info@eyeonproperty.co.ke</p>
+                            <!-- <p>info@eyeonproperty.co.ke</p> -->
                         </div>
                     </div>
                     <div class="contact-item">
